# Padutronics.Windows.Win32.Api

./: .gitignore  Padutronics.Windows.Win32.Api.sln
Source/Padutronics.Windows.Win32.Api/: DllNames.cs  Padutronics.Windows.Win32.Api.csproj
Source/Padutronics.Windows.Win32.Api.CWrapper/: CMakeLists.txt  Configuration.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/D2D1/: ID2D1Bitmap.cpp  ID2D1Bitmap.hpp  ID2D1BitmapBrush.cpp  ID2D1BitmapBrush.hpp  ID2D1Brush.cpp  ID2D1Brush.hpp  ID2D1EllipseGeometry.cpp  ID2D1EllipseGeometry.hpp  ID2D1Factory.cpp  ID2D1Factory.hpp  ID2D1Geometry.cpp  ID2D1Geometry.hpp  ID2D1GeometryGroup.cpp  ID2D1GeometryGroup.hpp  ID2D1GradientStopCollection.cpp  ID2D1GradientStopCollection.hpp  ID2D1LinearGradientBrush.cpp  ID2D1LinearGradientBrush.hpp  ID2D1PathGeometry.cpp  ID2D1PathGeometry.hpp  ID2D1RadialGradientBrush.cpp  ID2D1RadialGradientBrush.hpp  ID2D1RectangleGeometry.cpp  ID2D1RectangleGeometry.hpp  ID2D1RenderTarget.cpp  ID2D1RenderTarget.hpp  ID2D1Resource.cpp  ID2D1Resource.hpp  ID2D1SimplifiedGeometrySink.cpp  ID2D1SimplifiedGeometrySink.hpp  ID2D1SolidColorBrush.cpp  ID2D1SolidColorBrush.hpp  ID2D1StrokeStyle.cpp  ID2D1StrokeStyle.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/D3D11/: ID3D11Device.cpp  ID3D11Device.hpp  ID3D11DeviceContext.cpp  ID3D11DeviceContext.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/DWrite/: IDWriteFactory.cpp  IDWriteFactory.hpp  IDWriteTextFormat.cpp  IDWriteTextFormat.hpp  IDWriteTextLayout.cpp  IDWriteTextLayout.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/Dxgi/: IDXGIFactory.cpp  IDXGIFactory.hpp  IDXGISwapChain.cpp  IDXGISwapChain.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/Unknwn/: IUnknown.cpp  IUnknown.hpp
Source/Padutronics.Windows.Win32.Api.CWrapper/WinCodec/: IWICBitmapDecoder.cpp  IWICBitmapDecoder.hpp  IWICFormatConverter.cpp  IWICFormatConverter.hpp  IWICImagingFactory.cpp  IWICImagingFactory.hpp
Source/Padutronics.Windows.Win32.Api/ComBaseApi/: GlobalFunctions.cs
Source/Padutronics.Windows.Win32.Api/D2D1/: Constants.cs  D2D1Bitmap.cs  D2D1BitmapBrush.cs  D2D1Brush.cs  D2D1EllipseGeometry.cs  D2D1Factory.cs  D2D1Geometry.cs  D2D1GeometryGroup.cs  D2D1GeometrySink.cs  D2D1GradientStopCollection.cs  D2D1Image.cs  D2D1Layer.cs  D2D1LinearGradientBrush.cs  D2D1PathGeometry.cs  D2D1RadialGradientBrush.cs  D2D1RectangleGeometry.cs  D2D1RenderTarget.cs  (+55 more)
Tests/Padutronics.Windows.Win32.Api.Tests/: Padutronics.Windows.Win32.Api.Tests.csproj
(+161 files in other folders)
